# nfixcalc

./: .flake8  LICENSE  README.md  pyproject.toml
nfixcalc/: __init__.py  buffer.py  calculator.py  errors.py  gui.py  repl.py  utils.py
nfixcalc/ui/: __init__.py  calc_ui.py  calc_ui.ui
tests/: test_calculator.py  test_nfixcalc.py
