[tool.poetry]
name = "nfixcalc"
version = "0.1.0"
description = ""
authors = ["kosayoda <kieransiek@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
PySide2 = "^5.15"
qdarkstyle = "^2.8"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"
flake8-import-order = "^0.18.1"

[tool.poetry.scripts]
gui = 'nfixcalc.gui:main'
repl = 'nfixcalc.repl:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

